# Backbone-tap2mine

./: .gitignore  README.md  Workflow.md  build.sh  deploy-ipfs.sh  index.html  manifest.webmanifest  sw.js
.github/workflows/: deploy.yml
.kilocode/: Workflow  Workflow.md  xxxWORKFLOW.md
assets/: index-Cs3NmFAj.css  index-Cul2bbX_.js  index-D_SB1baD.css  index-FRUsEAYF.js
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/css/: style.css
frontend/js/: app.ts  relay-client.ts  wasm-loader.ts  webrtc.ts
frontend/wasm/: tap2mine_node.d.ts  tap2mine_node.js  tap2mine_node_bg.wasm  tap2mine_node_bg.wasm.d.ts
icons/: icon-192.png.txt
mcp/: mcp-server.js  package.json
node/: Cargo.toml  go.mod
node/cmd/tap2mine/: main.go
node/pkg/api/: jsonrpc.go
node/pkg/blocklattice/: blocklattice.go
node/pkg/config/: config.go
node/pkg/crypto/: keys.go
node/pkg/genesis/: genesis.go
node/pkg/mcp/: server.go
node/pkg/tap/: entropy.go
node/skill/: SKILL.md
node/src/: blocklattice.rs  crypto.rs  lib.rs  main.rs  native.rs  node.rs  tap.rs  wasm_bind.rs
node/src/api/: mod.rs
node/src/blocklattice/: mod.rs
node/src/crypto/: mod.rs
node/src/genesis/: mod.rs
node/src/tap/: mod.rs
relay/: package-lock.json  package.json  server.js  worker.js  wrangler.toml
